force-app/main/default/objects/Order/fields/AccountSubsidiaryLegalName__c.field-meta.xml
<CustomField>
    <fullName>AccountSubsidiaryLegalName__c</fullName>
    <formula>TEXT(AccountSubsidiary__r.LegalName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Subsidiary Legal Name</label>
    <type>Text</type>
</CustomField>