force-app/main/default/objects/Order/fields/Actionee__c.field-meta.xml
<CustomField>
    <fullName>Actionee__c</fullName>
    <inlineHelpText>Who needs to follow up?</inlineHelpText>
    <label>Actionee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperatingCompany</valueSetName>
    </valueSet>
</CustomField>