force-app/main/default/objects/Order/fields/ActivateforAssetRenewal__c.field-meta.xml
<CustomField>
    <fullName>ActivateforAssetRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate for Asset Renewal_DELETE</label>
    <type>Checkbox</type>
</CustomField>