force-app/main/default/objects/Order/fields/ActivateforBatchProcessing__c.field-meta.xml
<CustomField>
    <fullName>ActivateforBatchProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate for Batch Processing</label>
    <type>Checkbox</type>
</CustomField>