force-app/main/default/objects/Order/fields/B2BJobRun__c.field-meta.xml
<CustomField>
    <fullName>B2BJobRun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Job Run TO DELETE</label>
    <type>Checkbox</type>
</CustomField>