force-app/main/default/objects/Order/fields/B2BLineCount__c.field-meta.xml
<CustomField>
    <fullName>B2BLineCount__c</fullName>
    <label>B2B Line Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>