force-app/main/default/objects/Order/fields/BillingAddressNote__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressNote__c</fullName>
    <label>Billing Address Note</label>
    <type>TextArea</type>
</CustomField>