force-app/main/default/objects/Order/fields/BillingHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseNumber__c</fullName>
    <label>Billing House Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>