force-app/main/default/objects/Order/fields/Billto__c.field-meta.xml
<CustomField>
    <fullName>Billto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bill to)</relationshipLabel>
    <relationshipName>BilltoOrders</relationshipName>
    <type>Lookup</type>
</CustomField>