force-app/main/default/objects/Order/fields/BillTo_Address_Validated_Formula__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Address_Validated_Formula__c</fullName>
    <formula>BillToAddress__r.Validated_Address__c</formula>
    <label>BillTo Address Validated Formula</label>
    <type>Checkbox</type>
</CustomField>