force-app/main/default/objects/Order/fields/BillToAccountName__c.field-meta.xml
<CustomField>
    <fullName>BillToAccountName__c</fullName>
    <formula>Billto__r.TempLegalName__c</formula>
    <label>Bill To Account Name</label>
    <type>Text</type>
</CustomField>