force-app/main/default/objects/Order/fields/BillToAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>BillToAddressValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill-To Address Validated</label>
    <type>Checkbox</type>
</CustomField>