force-app/main/default/objects/Order/fields/BillToCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>BillToCustomerNumber__c</fullName>
    <formula>Billto__r.NetsuiteCustomerNumber__c</formula>
    <label>Bill To Customer Number</label>
    <type>Text</type>
</CustomField>