force-app/main/default/objects/Order/fields/BillToDepartment__c.field-meta.xml
<CustomField>
    <fullName>BillToDepartment__c</fullName>
    <description>Bill to Department name</description>
    <formula>Billto__r.Department__c</formula>
    <label>Bill to Department</label>
    <type>Text</type>
</CustomField>