force-app/main/default/objects/Order/fields/BillTolanguage__c.field-meta.xml
<CustomField>
    <fullName>BillTolanguage__c</fullName>
    <formula>TEXT( Billto__r.CommunicationLanguage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to Language</label>
    <type>Text</type>
</CustomField>