force-app/main/default/objects/Order/fields/BillToLegalName__c.field-meta.xml
<CustomField>
    <fullName>BillToLegalName__c</fullName>
    <description>Legal Name of the Bill-to party</description>
    <formula>Billto__r.FullLegalName__c</formula>
    <label>Bill to Legal Name</label>
    <type>Text</type>
</CustomField>