force-app/main/default/objects/Order/fields/BlockSync__c.field-meta.xml
<CustomField>
    <fullName>BlockSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true will block the order from being synced to IF</description>
    <label>Block Sync</label>
    <type>Checkbox</type>
</CustomField>