force-app/main/default/objects/Order/fields/BrainLainOrderId__c.field-meta.xml
<CustomField>
    <fullName>BrainLainOrderId__c</fullName>
    <externalId>true</externalId>
    <label>BrainLain Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>