force-app/main/default/objects/Order/fields/ConsultancyProjectStarted__c.field-meta.xml
<CustomField>
    <fullName>ConsultancyProjectStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for NH Zorg where they can indicate that they have started a consultancy project for this order in an external system (Monday)</description>
    <label>Consultancy Project Started</label>
    <type>Checkbox</type>
</CustomField>