force-app/main/default/objects/Order/fields/CorrectionOrderNSID__c.field-meta.xml
<CustomField>
    <fullName>CorrectionOrderNSID__c</fullName>
    <label>Correction Order NS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>