force-app/main/default/objects/Order/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <label>Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>