force-app/main/default/objects/Order/fields/CreatedByCorrectionProcess__c.field-meta.xml
<CustomField>
    <fullName>CreatedByCorrectionProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Correction Process</label>
    <type>Checkbox</type>
</CustomField>