force-app/main/default/objects/Order/fields/CreditedAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditedAmount__c</fullName>
    <description>Amount credited to the customer in NetSuite</description>
    <label>Credited Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>