force-app/main/default/objects/Order/fields/CreditLimitReached__c.field-meta.xml
<CustomField>
    <fullName>CreditLimitReached__c</fullName>
    <formula>Billto__r.CreditLimitReached__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreditLimit Reached</label>
    <type>Checkbox</type>
</CustomField>