force-app/main/default/objects/Order/fields/CreditStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditStatus__c</fullName>
    <formula>IF(ISBLANK(AccountSubsidiary__r.NetsuiteCustomerNumber__c),&quot;Unknown&quot;,
IF( AccountSubsidiary__r.CreditLimit__c &gt; (AccountSubsidiary__r.OutstandingBalance__c + TotalAmount), &quot;Good&quot;, &quot;Bad&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the credit status of this customer</inlineHelpText>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>