force-app/main/default/objects/Order/fields/CustomerOrderType__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderType__c</fullName>
    <description>Stores the customer order type that was received from the Import Order record</description>
    <inlineHelpText>Business or Private</inlineHelpText>
    <label>Customer Order Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>