force-app/main/default/objects/Order/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <inlineHelpText>Use this field for customer reference such as purchase order id&apos;s, project id&apos;s etc.</inlineHelpText>
    <label>Order Reference</label>
    <length>45</length>
    <type>Text</type>
</CustomField>