force-app/main/default/objects/Order/fields/DeliveryEmail__c.field-meta.xml
<CustomField>
    <fullName>DeliveryEmail__c</fullName>
    <label>Delivery Email</label>
    <type>Email</type>
</CustomField>