force-app/main/default/objects/Order/fields/DeliveryPhone__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPhone__c</fullName>
    <label>Delivery Phone</label>
    <type>Phone</type>
</CustomField>