force-app/main/default/objects/Order/fields/DeliveryRouting__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouting__c</fullName>
    <label>Delivery Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeliveryRouting</valueSetName>
    </valueSet>
</CustomField>