force-app/main/default/objects/Order/fields/DoNotSendOrderConfirmation__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendOrderConfirmation__c</fullName>
    <formula>if(TEXT(Type)==&apos;RenewalOrder&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do not send order confirmation</label>
    <type>Checkbox</type>
</CustomField>