force-app/main/default/objects/Order/fields/DontSendOrderConfirmation__c.field-meta.xml
<CustomField>
    <fullName>DontSendOrderConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Send Order Confirmation</label>
    <type>Checkbox</type>
</CustomField>