force-app/main/default/objects/Order/fields/DUDOrder__c.field-meta.xml
<CustomField>
    <fullName>DUDOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zRemove DUD Order</label>
    <type>Checkbox</type>
</CustomField>