force-app/main/default/objects/Order/fields/ErrorReason__c.field-meta.xml
<CustomField>
    <fullName>ErrorReason__c</fullName>
    <formula>IF(TEXT(Source__c) != &apos;Netsuite Manual&apos; &amp;&amp; ValidateB2BLineCountError__c != 0, &quot;Issue with Order Import&quot;,
IF(TEXT(Source__c) != &apos;Netsuite Manual&apos; &amp;&amp; ValidateTotalLineItemQuantities__c != 0, &quot;Issue with Order Import&quot;,
IF(TEXT(Source__c) != &apos;Netsuite Manual&apos; &amp;&amp; ValidateShippingCostExclVAT__c != 0, &quot;Issue with Order Import&quot;,
IF(ValidationErrorsOrderProducts__c &gt; 0, &quot;Issue with an order product&quot;,
IF(ValidateNetSalesPrice__c &gt; 0, &quot;Order amount cannot be negative&quot;,

IF( AND(
	LineCount__c &gt; 0,
		OR(
		ISBLANK(NetSuiteIdAccountSubsidiary__c),
		ISBLANK(Billto__c),
		((ISBLANK(Shipto__c) || ISBLANK(NetSuiteIdShiptoAccount__c)) &amp;&amp; MultipleShippingLocations__c = false)
		)
	),&quot;Missing Customer Relations/Ids&quot;,

IF( ValidateActivateEmailsRequired__c = 1, &quot;Issue with emails&quot;,
IF( ValidateReferenceNumberCheck__c &gt;= 1, &quot;Reference number too long&quot;,
IF(TEXT(Billto__r.BlockReason__c) = &apos;Deactivated&apos; || TEXT(Shipto__r.BlockReason__c) = &apos;Deactivated&apos;, &quot;Bill to or Ship to is deactivated&quot;, &quot;None&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Error Reason</label>
    <type>Text</type>
</CustomField>