force-app/main/default/objects/Order/fields/ExternalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCustomerId__c</fullName>
    <formula>Billto__r.ExternalCustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalCustomerId</label>
    <type>Text</type>
</CustomField>