force-app/main/default/objects/Order/fields/ExternalOrderId__c.field-meta.xml
<CustomField>
    <fullName>ExternalOrderId__c</fullName>
    <externalId>true</externalId>
    <label>External Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>