force-app/main/default/objects/Order/fields/FollowUpOrder__c.field-meta.xml
<CustomField>
    <fullName>FollowUpOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renewal or otherwise connected Order. Note: for reduction orders use OriginalOrderID.</description>
    <label>Follow Up Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Previous Orders</relationshipLabel>
    <relationshipName>PreviousOrders</relationshipName>
    <type>Lookup</type>
</CustomField>