force-app/main/default/objects/Order/fields/ForTheAttentionOf__c.field-meta.xml
<CustomField>
    <fullName>ForTheAttentionOf__c</fullName>
    <label>For The Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>