force-app/main/default/objects/Order/fields/IGComponentMismatch__c.field-meta.xml
<CustomField>
    <fullName>IGComponentMismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IGComponent Mismatch</label>
    <type>Checkbox</type>
</CustomField>