force-app/main/default/objects/Order/fields/InventoryItemCount__c.field-meta.xml
<CustomField>
    <fullName>InventoryItemCount__c</fullName>
    <label>Inventory Item Count</label>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Inventory Item</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.MultiShiptoInventoryRollingCount__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>