force-app/main/default/objects/Order/fields/InventoryItemShippingAddressCount__c.field-meta.xml
<CustomField>
    <fullName>InventoryItemShippingAddressCount__c</fullName>
    <label>Inventory Item Shipping Address Count</label>
    <summarizedField>OrderItem.MultiShipAddressRollingCount__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Inventory Item</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>