force-app/main/default/objects/Order/fields/InvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmail__c</fullName>
    <label>Invoice Email</label>
    <type>TextArea</type>
</CustomField>