force-app/main/default/objects/Order/fields/Invoicenote__c.field-meta.xml
<CustomField>
    <fullName>Invoicenote__c</fullName>
    <inlineHelpText>This field is used as a note to be set only on the invoice. For example, &apos;as part of service request 2124&apos;, &apos;for schoolyear books 2022-2023&apos;, etc.</inlineHelpText>
    <label>Invoice note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>