force-app/main/default/objects/Order/fields/InvoicingEmail2__c.field-meta.xml
<CustomField>
    <fullName>InvoicingEmail2__c</fullName>
    <label>Invoicing Email 2</label>
    <type>Email</type>
</CustomField>