force-app/main/default/objects/Order/fields/InvoicingFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoicingFrequency__c</fullName>
    <description>Used to pass on the invoicing frequency to assets so the system knows when to create new orders and order items.</description>
    <label>Invoicing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Frequency</valueSetName>
    </valueSet>
</CustomField>