force-app/main/default/objects/Order/fields/IsCredited__c.field-meta.xml
<CustomField>
    <fullName>IsCredited__c</fullName>
    <formula>CreditedAmount__c &gt; 0</formula>
    <label>Credited</label>
    <type>Checkbox</type>
</CustomField>