force-app/main/default/objects/Order/fields/IsRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We need to know whether an order was a renewal order or not. Otherwise we can not calculate indexations correctly.</description>
    <label>Renewal Order</label>
    <type>Checkbox</type>
</CustomField>