force-app/main/default/objects/Order/fields/ItemGroupCount__c.field-meta.xml
<CustomField>
    <fullName>ItemGroupCount__c</fullName>
    <label>Item Group Count</label>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Item Group</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>