force-app/main/default/objects/Order/fields/KamOnboardingCompleted__c.field-meta.xml
<CustomField>
    <fullName>KamOnboardingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding completed by KAM</label>
    <type>Checkbox</type>
</CustomField>