force-app/main/default/objects/Order/fields/LastUpdateToAWS__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateToAWS__c</fullName>
    <label>LastUpdateToAWS</label>
    <type>DateTime</type>
</CustomField>