force-app/main/default/objects/Order/fields/LineCount__c.field-meta.xml
<CustomField>
    <fullName>LineCount__c</fullName>
    <inlineHelpText>Total line count of all Order Products related</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>