force-app/main/default/objects/Order/fields/LineItemShipping__c.field-meta.xml
<CustomField>
    <fullName>LineItemShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Item Shipping</label>
    <type>Checkbox</type>
</CustomField>