force-app/main/default/objects/Order/fields/MasterOrder__c.field-meta.xml
<CustomField>
    <fullName>MasterOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Master Order)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>