force-app/main/default/objects/Order/fields/MaxOrderLine__c.field-meta.xml
<CustomField>
    <fullName>MaxOrderLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MaxOrderLine</label>
    <referenceTo>MaxOrderLine__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>