force-app/main/default/objects/Order/fields/MultipleShippingLocations__c.field-meta.xml
<CustomField>
    <fullName>MultipleShippingLocations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is not true then you are not allowed to ship to multiple ship-to&apos;s</description>
    <inlineHelpText>If set to true, you are allowed to ship to multiple ship-to&apos;s</inlineHelpText>
    <label>Multiple Shipping Locations</label>
    <type>Checkbox</type>
</CustomField>