force-app/main/default/objects/Order/fields/NetSuiteIdAccountSubsidiary__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteIdAccountSubsidiary__c</fullName>
    <label>NetSuiteId Account Subsidiary</label>
    <length>56</length>
    <type>Text</type>
</CustomField>