force-app/main/default/objects/Order/fields/NetsuiteOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteOrderStatus__c</fullName>
    <label>Netsuite Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>