force-app/main/default/objects/Order/fields/NetSuiteStatus__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteStatus__c</fullName>
    <label>NetSuite Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>