force-app/main/default/objects/Order/fields/NonInventoryItemCount__c.field-meta.xml
<CustomField>
    <fullName>NonInventoryItemCount__c</fullName>
    <label>Non Inventory item count</label>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Non-inventory Item</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>