force-app/main/default/objects/Order/fields/NonInventoryItemNoEndDate__c.field-meta.xml
<CustomField>
    <fullName>NonInventoryItemNoEndDate__c</fullName>
    <label>zRemove Non Inventory item No EndDate</label>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Non-inventory Item</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.EndDate</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>