force-app/main/default/objects/Order/fields/NonInventoryItemNoStartDate__c.field-meta.xml
<CustomField>
    <fullName>NonInventoryItemNoStartDate__c</fullName>
    <label>zRemove Non Inventory item No StartDate</label>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Non-inventory Item</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.ServiceDate</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>