force-app/main/default/objects/Order/fields/NSOrderId__c.field-meta.xml
<CustomField>
    <fullName>NSOrderId__c</fullName>
    <externalId>true</externalId>
    <label>NSOrderId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>