force-app/main/default/objects/Order/fields/NSOrderInternalId__c.field-meta.xml
<CustomField>
    <fullName>NSOrderInternalId__c</fullName>
    <externalId>true</externalId>
    <label>NS Order InternalId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>