force-app/main/default/objects/Order/fields/NSOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>NSOrderStatus__c</fullName>
    <label>NS Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Pending Fulfillment</fullName>
            </value>
            <value>
                <fullName>Partially Fulfilled</fullName>
            </value>
            <value>
                <fullName>Pending Billing/Partially Fulfilled</fullName>
            </value>
            <value>
                <fullName>Pending Billing</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>