force-app/main/default/objects/Order/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <inlineHelpText>Based on the Pricing Method it selects the relation from the Ordering Account</inlineHelpText>
    <label>Number of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>