force-app/main/default/objects/Order/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.OperatingCompany__c, &quot;Plantyn&quot;), &quot;Plantyn&quot;,
IF(ISPICKVAL($User.OperatingCompany__c, &quot;Liber&quot;), &quot;Liber&quot;,
IF(ISPICKVAL($User.OperatingCompany__c, &quot;Noordhoff&quot;), &quot;Noordhoff&quot;,
IF(ISPICKVAL($User.OperatingCompany__c, &quot;Noordhoff Zorg&quot;), &quot;Noordhoff Zorg&quot;,
			&quot;&quot;))))</defaultValue>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperatingCompany</valueSetName>
    </valueSet>
</CustomField>