force-app/main/default/objects/Order/fields/OrderActivateOverride__c.field-meta.xml
<CustomField>
    <fullName>OrderActivateOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Activate Override</label>
    <type>Checkbox</type>
</CustomField>