force-app/main/default/objects/Order/fields/OrderedBy__c.field-meta.xml
<CustomField>
    <fullName>OrderedBy__c</fullName>
    <formula>OrderedByFirstName__c + &apos; &apos; + OrderedByLastName__c</formula>
    <label>Ordered By</label>
    <type>Text</type>
</CustomField>