force-app/main/default/objects/Order/fields/OrderedByEmail__c.field-meta.xml
<CustomField>
    <fullName>OrderedByEmail__c</fullName>
    <description>Stores the Email address of the User from the Import Order who created the B2B Order (not the SF User)</description>
    <label>Ordered By Email</label>
    <type>Email</type>
</CustomField>