force-app/main/default/objects/Order/fields/OrderedByFirstName__c.field-meta.xml
<CustomField>
    <fullName>OrderedByFirstName__c</fullName>
    <label>Ordered By First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>