force-app/main/default/objects/Order/fields/OrderedByLastName__c.field-meta.xml
<CustomField>
    <fullName>OrderedByLastName__c</fullName>
    <label>Ordered By Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>