force-app/main/default/objects/Order/fields/OrderedBySchoolNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderedBySchoolNumber__c</fullName>
    <label>Ordered By School Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>