force-app/main/default/objects/Order/fields/OrderEndDate__c.field-meta.xml
<CustomField>
    <fullName>OrderEndDate__c</fullName>
    <description>We need this field because the regular default order end date stores it&apos;s date in some time format with which we can not calculate dependent dates correctly.</description>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>