force-app/main/default/objects/Order/fields/OrderImportAmountExclVAT__c.field-meta.xml
<CustomField>
    <fullName>OrderImportAmountExclVAT__c</fullName>
    <description>The Order amount (sub-total) excluding VAT received from the Import Order</description>
    <label>Order Import Amount (Excl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>