force-app/main/default/objects/Order/fields/OrderImportLineCount__c.field-meta.xml
<CustomField>
    <fullName>OrderImportLineCount__c</fullName>
    <label>Order Import Line Count</label>
    <summaryFilterItems>
        <field>OrderItem.orderImportNumber__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>