force-app/main/default/objects/Order/fields/OrderImportLineCountSent__c.field-meta.xml
<CustomField>
    <fullName>OrderImportLineCountSent__c</fullName>
    <label>Order Import Line Count Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>