force-app/main/default/objects/Order/fields/OrderImportShippingCost__c.field-meta.xml
<CustomField>
    <fullName>OrderImportShippingCost__c</fullName>
    <description>Shipping Cost from the Import Order received</description>
    <label>Order Import Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>