force-app/main/default/objects/Order/fields/OrderImportTotalLineQuantities__c.field-meta.xml
<CustomField>
    <fullName>OrderImportTotalLineQuantities__c</fullName>
    <description>Total Quantity of all the products received from the Import Order Total Line Count Quantities</description>
    <label>Order Import Total Line Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>