force-app/main/default/objects/Order/fields/OrderNumberId__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberId__c</fullName>
    <label>Order Number Id</label>
    <length>155</length>
    <type>Text</type>
</CustomField>