force-app/main/default/objects/Order/fields/OrderRemovedate__c.field-meta.xml
<CustomField>
    <fullName>OrderRemovedate__c</fullName>
    <formula>CreatedDate + 15 *(1/24/60)</formula>
    <label>Order Remove date</label>
    <type>DateTime</type>
</CustomField>